# Binary-Classification-with-a-Bank-Dataset

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: eda.ipynb  sagemaker_ai_pipeline.ipynb
notebooks/sagemaker-pipeline/: sagemaker_ai_pipeline1.ipynb  test.py
src/: sagemaker-pipeline.py
