[project]
name = "binary-classification-with-a-bank-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fsspec>=2025.7.0",
    "kaggle>=1.7.4.5",
    "lightgbm>=4.6.0",
    "pandas>=2.3.1",
    "s3fs>=2025.7.0",
    "sagemaker>=2.249.0",
    "scikit-learn>=1.7.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.30.1",
    "isort>=6.0.1",
]
